syntax = "proto3";

package main;

option go_package = "./proto";

// 添加用户商品浏览历史记录
message AddMemberReadHistoryReq {
  string id = 1; //
  int64 member_id = 2; //会员id
  string member_nick_name = 3; //会员姓名
  string member_icon = 4; //会员头像
  int64 product_id = 5; //商品id
  string product_name = 6; //商品名称
  string product_pic = 7; //商品图片
  string product_sub_title = 8; //商品标题
  int64 product_price = 9; //商品价格

}

message AddMemberReadHistoryResp {
  string pong = 1;
}

// 删除用户商品浏览历史记录
message DeleteMemberReadHistoryReq {
  repeated string ids = 1;
  int64 MemberId = 2; //会员id
}

message DeleteMemberReadHistoryResp {
  string pong = 1;
}

// 查询用户商品浏览历史记录详情
message QueryMemberReadHistoryDetailReq {
  string id = 1;
}

message QueryMemberReadHistoryDetailResp {
  string id = 1; //
  int64 member_id = 2; //会员id
  string member_nick_name = 3; //会员姓名
  string member_icon = 4; //会员头像
  int64 product_id = 5; //商品id
  string product_name = 6; //商品名称
  string product_pic = 7; //商品图片
  string product_sub_title = 8; //商品标题
  int64 product_price = 9; //商品价格
  string create_time = 10; //浏览时间

}

// 分页查询用户商品浏览历史记录列表
message QueryMemberReadHistoryListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  int64 member_id = 4; //会员id

}

message MemberReadHistoryListData {
  string id = 1; //
  int64 member_id = 2; //会员id
  string member_nick_name = 3; //会员姓名
  string member_icon = 4; //会员头像
  int64 product_id = 5; //商品id
  string product_name = 6; //商品名称
  string product_pic = 7; //商品图片
  string product_sub_title = 8; //商品标题
  int64 product_price = 9; //商品价格
  string create_time = 10; //浏览时间

}

message QueryMemberReadHistoryListResp {
  repeated  MemberReadHistoryListData list = 1;
}

// 用户商品浏览历史记录
service MemberReadHistoryService {
  // 添加用户商品浏览历史记录
  rpc AddMemberReadHistory(AddMemberReadHistoryReq) returns (AddMemberReadHistoryResp){}
  //清空浏览记录/删除浏览记录
  rpc DeleteMemberReadHistory(DeleteMemberReadHistoryReq) returns (DeleteMemberReadHistoryResp){}
  // 查询用户商品浏览历史记录详情
   rpc QueryMemberReadHistoryDetail(QueryMemberReadHistoryDetailReq) returns (QueryMemberReadHistoryDetailResp){}
  // 查询用户商品浏览历史记录列表
  rpc QueryMemberReadHistoryList(QueryMemberReadHistoryListReq) returns (QueryMemberReadHistoryListResp){}


}
